2006-03-29  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PACKAGE_NAME): release 2.9.0.

	* input/regression/stem-tremolo-position.ly: new file.

	* lily/stem-tremolo.cc: remove Stem_tremolo::dim_callback

2006-03-28  Joe Neeman  <joeneeman@gmail.com>

	* lily/stem-tremolo.cc (print): position
	the tremolo depending only on the end of the stem
	and not on the notehead
	(raw_stencil): center, on the middle staff line, the
	flag that is closest to the end of the stem (previously
	the bottom flag)
	(calc_width): add this callback to shorten a tremolo when
	it is beamed or it is stemup with a flag
	(style): add this callback to make a tremolo rectangular when
	it is beamed or it is stemup with a flag
	(rotated_box): this is like Lookup::beam but makes a rotated
	rectangle instead of a parallelogram

	* lily/stem.cc (calc_stem_info): make sure the stem
	is long enough to fit the tremolo
	(calc-length): reduce the length of tremolo stems since the
	tremolo code is now capable of better positioning

	* scm/define-grobs.scm: make calc_width the default beam-width
	callback for stem-tremolo and add the style callback
		
2006-03-29  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/tuplet-bracket.cc (calc_control_points): handle suicide
	case. Backportme.

2006-03-29  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/ttf.cc (make_index_to_charcode_map): restore old
	cmap. Backportme.

2006-03-28  Werner Lemberg  <wl@gnu.org>

	* lily/pango-font.cc (get_unicode_name): Fix `uXXXXX' glyph names.

2006-03-28  Graham Percival  <gpermus@gmail.com>

	* THANKS: update for 2.9, add section for Documentation helpers.

	* Documentation/topdocs/NEWS.tely: compile fix.

	* Documentation/user/ basic-notation, global, advanced-notation,
	examples.itely: minor fixes from mailist.

2006-03-28  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* mf/feta-bolletjes.mf: match width of solfa notes with normal
	note heads. Backportme.

	* lily/ttf.cc (print_trailer): use it.
